# BioAcess

./: .dockerignore  .env.production  .env.railway.example  .env.render.example  .gitignore  .vercelignore  CHAVE_JWT.md  CONFIGURACAO_ENV.md  CONFIGURACAO_RAPIDA.md  CONFIGURAR_RAILWAY.md  CORRECOES_RENDER.md  DEPLOY_GUIDE.md  DEPLOY_RAPIDO.md  DEPLOY_RENDER.md  DEPLOY_VERCEL.md  Dockerfile  GUIA_IMPLEMENTACAO_APS.md  INSTALACAO.md  INSTRUCOES_VERCEL_URGENTE.md  Procfile  RAILWAY_CONFIG.md  RAILWAY_DEPLOY.md  RAILWAY_QUICK_START.md  README.md  SUPABASE_SETUP.md  build.sh  check_render_deps.py  debug_build.sh  fix_ana_luiza.py  generate_passwords.py  index.html  install_render.py  nixpacks.toml  package-lock.json  package.json  prepare_vercel.ps1  railway.json  railway.toml  render.yaml  render_start.py  (+11 more)
.github/workflows/: deploy.yml
src/: App.tsx  index.css  main.tsx
src/backend/: .env.backup  .env.example  Dockerfile  README.md  add_face_embedding_column.py  check_env.py  cleanup_users.py  create_users_supabase.py  init_db.py  production_server.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_server.py
src/backend/app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  security.py
src/backend/app/models/: __init__.py  biometric_template.py  user.py
src/backend/app/routers/: __init__.py  auth.py  data.py  reports.py
src/backend/app/services/: __init__.py  audit.py  biometric_engine.py  liveness.py
src/components/: CameraCapture.tsx  CameraLogin.tsx  ImageUpload.tsx  LivenessCapture.tsx  ProtectedRoute.tsx
src/contexts/: AuthContext.tsx  (+1 more)
(+16 files in other folders)
